# pyconfigtree

./: .gitignore  pyproject.toml
pyconfigtree/: __init__.py  base.py  exceptions.py  properties.py
pyconfigtree/parameter/: __init__.py  base.py  bool_parameter.py  choice_parameter.py  float_parameter.py  int_parameter.py  list_parameter.py  string_parameter.py
pyconfigtree/source/: __init__.py  base.py  json.py  toml.py
tests/: node_attachment_test.py
