[project]
name = "pyconfigtree"
version = "0.1.0"
description = "A lightweight yet powerful mini-framework for building hierarchical, tree-structured configs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
toml = [
    "tomli-w>=1.0.0",
]
tests = [
    "pytest>=7.4.4",
]
