[project]
name = "pyconfigtree"
version = "0.1.0"
description = "A lightweight yet powerful mini-framework for building hierarchical, tree-structured configs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
toml = [
    "tomli-w>=1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
