[project]
name = "pyconfigtree"
version = "0.1.0"
description = "A lightweight yet powerful mini-framework for building hierarchical, tree-structured configs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
toml = [
    "tomli-w>=1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]


[tool.mypy]
python_version = '3.10'
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
pretty = true
exclude = [
    "docs",
    ".venv",
]


[tool.ruff]
line-length = 99
exclude = [
    ".git",
    "build",
    "dist",
    "venv",
    ".venv",
    "docs",
    "*.egg-info"
]


[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
indent-style = "space"


[tool.ruff.lint]
select = [
    "I",
    "N",
    "C4",
    "E",
    "F",
    "T20",
    "RET",
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-to-top = ["typing"]
length-sort = true
lines-between-types = 0
lines-after-imports = 2
split-on-trailing-comma = true
combine-as-imports = true
force-wrap-aliases = true
